// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`provider task-envelope renderers > renders a callback-free Claude Code stream transport 1`] = `
"# Claude Code Task Envelope

## Transport

- Envelope: \`task-envelope/v1\`
- Digest: \`sha256:302d54afba41110c4ed97282ab10301369f4f7cd20fc5cea2e4e5cfee34e7490\`
- Provider: \`claude-code\`
- Adapter: \`claude-code\`
- Runtime manifest: \`sha256:bba91360a18d6eb62bf796a02a3fb84b7a46f4022a128a7d96a847e4b5e1ca3d\`
- Protocol: \`fixture-runtime/v1\`
- Task: \`task_transport\`
- Attempt: \`attempt_transport\`

## Objective

Ship the provider transport

## Background

- Translate the immutable task contract without changing completion ownership.


## Constraints

- Follow the release checklist.
- Operate only inside the assigned worktree: /tmp/veritas-kanban-transport


## Workspace

- Repository: \`veritas-kanban\`
- Branch: \`feat/claude-code-transport\`
- Base branch: \`main\`
- Worktree: \`/tmp/veritas-kanban-transport\`
- Launch HEAD: \`aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa\`
- Launch state: clean

### Launch Baseline Files

- None.



## Commit Policy

Required: create at least one new commit attributable to this attempt.

## Acceptance Criteria

- The provider receives the persisted envelope.


## Allowed Side Effects

- \`filesystem-write\` within \`/tmp/veritas-kanban-transport\`
- \`process-execute\` within \`/tmp/veritas-kanban-transport\`
- \`git-commit\` within \`/tmp/veritas-kanban-transport\`
- \`network-egress\` within \`sandbox policy\`


## Expected Outputs

- Required \`text\` \`completion-summary\`: A concise summary of the completed work and remaining risks.
- Required \`commit\` \`git-commit\`: At least one new commit attributable to this attempt.


## Verification Gates

- Required \`provider-snapshot\`: Run the provider transport snapshot. Evidence is required.


## Completion Evidence Contract

- Schema: \`completion-result/v1\`
- Required \`provider-output\` \`terminal-state\`: Harness-verified provider terminal state from the native transport.
- Required \`verification\` \`verification\`: Harness-verified evidence for every required verification gate.
- Required \`commit\` \`commit\`: Harness-verified commit created after the launch baseline.




## Completion (Claude Code stream)

Return the final response through the terminal result record captured by Veritas.

Do not call the Veritas completion callback. The harness owns terminal-state capture.

No native structured-output support is assumed; Veritas validates and normalizes stream-json events."
`;

exports[`provider task-envelope renderers > renders a callback-free Codex CLI transport from a forbidden-commit envelope 1`] = `
"# Codex CLI Task Envelope

## Transport

- Envelope: \`task-envelope/v1\`
- Digest: \`sha256:f5d72f998347e18fda695872a4099e04c9f168d7d7d156322425424f6fdadf7a\`
- Provider: \`codex-cli\`
- Adapter: \`codex-cli\`
- Runtime manifest: \`sha256:d97ad73be9a5666117bc668d52ce83f22f66247d9447d85d5637495daf44297f\`
- Protocol: \`fixture-runtime/v1\`
- Task: \`task_transport\`
- Attempt: \`attempt_transport\`

## Objective

Ship the provider transport

## Background

- Translate the immutable task contract without changing completion ownership.


## Constraints

- Follow the release checklist.
- Operate only inside the assigned worktree: /tmp/veritas-kanban-transport


## Workspace

- Repository: \`veritas-kanban\`
- Branch: \`feat/codex-cli-transport\`
- Base branch: \`main\`
- Worktree: \`/tmp/veritas-kanban-transport\`
- Launch HEAD: \`aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa\`
- Launch state: clean

### Launch Baseline Files

- None.



## Commit Policy

Forbidden: do not create a commit. Leave permitted worktree changes uncommitted.

## Acceptance Criteria

- The provider receives the persisted envelope.


## Allowed Side Effects

- \`filesystem-write\` within \`/tmp/veritas-kanban-transport\`
- \`process-execute\` within \`/tmp/veritas-kanban-transport\`
- \`network-egress\` within \`sandbox policy\`


## Expected Outputs

- Required \`text\` \`completion-summary\`: A concise summary of the completed work and remaining risks.


## Verification Gates

- Required \`provider-snapshot\`: Run the provider transport snapshot. Evidence is required.


## Completion Evidence Contract

- Schema: \`completion-result/v1\`
- Required \`provider-output\` \`terminal-state\`: Harness-verified provider terminal state from the native transport.
- Required \`verification\` \`verification\`: Harness-verified evidence for every required verification gate.




## Completion (Codex CLI process)

Return the final response through the process output captured by Veritas.

Do not call the Veritas completion callback. The harness owns terminal-state capture.

No native structured-output support is assumed; Veritas validates and normalizes process output."
`;

exports[`provider task-envelope renderers > renders a callback-free Codex SDK transport from an allowed-commit envelope 1`] = `
"# Codex SDK Task Envelope

## Transport

- Envelope: \`task-envelope/v1\`
- Digest: \`sha256:70d21d2d4d8794a3d0184d3cc502399785b2a813d7ce490a6c1d6a38060c7426\`
- Provider: \`codex-sdk\`
- Adapter: \`codex-sdk\`
- Runtime manifest: \`sha256:c18a59a46b676143337dda5df499c81a5d7a19b78c75984779cb34771aee91d5\`
- Protocol: \`fixture-runtime/v1\`
- Task: \`task_transport\`
- Attempt: \`attempt_transport\`

## Objective

Ship the provider transport

## Background

- Translate the immutable task contract without changing completion ownership.


## Constraints

- Follow the release checklist.
- Operate only inside the assigned worktree: /tmp/veritas-kanban-transport


## Workspace

- Repository: \`veritas-kanban\`
- Branch: \`feat/codex-sdk-transport\`
- Base branch: \`main\`
- Worktree: \`/tmp/veritas-kanban-transport\`
- Launch HEAD: \`aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa\`
- Launch state: clean

### Launch Baseline Files

- None.



## Commit Policy

Allowed: a commit is permitted, but successful completion does not require one.

## Acceptance Criteria

- The provider receives the persisted envelope.


## Allowed Side Effects

- \`filesystem-write\` within \`/tmp/veritas-kanban-transport\`
- \`process-execute\` within \`/tmp/veritas-kanban-transport\`
- \`git-commit\` within \`/tmp/veritas-kanban-transport\`
- \`network-egress\` within \`sandbox policy\`


## Expected Outputs

- Required \`text\` \`completion-summary\`: A concise summary of the completed work and remaining risks.


## Verification Gates

- Required \`provider-snapshot\`: Run the provider transport snapshot. Evidence is required.


## Completion Evidence Contract

- Schema: \`completion-result/v1\`
- Required \`provider-output\` \`terminal-state\`: Harness-verified provider terminal state from the native transport.
- Required \`verification\` \`verification\`: Harness-verified evidence for every required verification gate.




## Completion (Codex SDK stream)

Return the final response through the SDK event stream captured by Veritas.

Do not call the Veritas completion callback. The harness owns terminal-state capture.

No native structured-output support is assumed; Veritas validates and normalizes SDK stream events."
`;

exports[`provider task-envelope renderers > renders a callback-free Codex app-server transport 1`] = `
"# Codex app-server Task Envelope

## Transport

- Envelope: \`task-envelope/v1\`
- Digest: \`sha256:a4af5ccd13ab1c275c06206f54c5bdb43cbb6ba04ba7c52a484dd25db0640022\`
- Provider: \`codex-app-server\`
- Adapter: \`codex-app-server\`
- Runtime manifest: \`sha256:eecb1d923e33ade9a316ef8728a7a70d1a15c948f82eb4cf5ae8e183ceaad459\`
- Protocol: \`fixture-runtime/v1\`
- Task: \`task_transport\`
- Attempt: \`attempt_transport\`

## Objective

Ship the provider transport

## Background

- Translate the immutable task contract without changing completion ownership.


## Constraints

- Follow the release checklist.
- Operate only inside the assigned worktree: /tmp/veritas-kanban-transport


## Workspace

- Repository: \`veritas-kanban\`
- Branch: \`feat/codex-app-server-transport\`
- Base branch: \`main\`
- Worktree: \`/tmp/veritas-kanban-transport\`
- Launch HEAD: \`aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa\`
- Launch state: clean

### Launch Baseline Files

- None.



## Commit Policy

Required: create at least one new commit attributable to this attempt.

## Acceptance Criteria

- The provider receives the persisted envelope.


## Allowed Side Effects

- \`filesystem-write\` within \`/tmp/veritas-kanban-transport\`
- \`process-execute\` within \`/tmp/veritas-kanban-transport\`
- \`git-commit\` within \`/tmp/veritas-kanban-transport\`
- \`network-egress\` within \`sandbox policy\`


## Expected Outputs

- Required \`text\` \`completion-summary\`: A concise summary of the completed work and remaining risks.
- Required \`commit\` \`git-commit\`: At least one new commit attributable to this attempt.


## Verification Gates

- Required \`provider-snapshot\`: Run the provider transport snapshot. Evidence is required.


## Completion Evidence Contract

- Schema: \`completion-result/v1\`
- Required \`provider-output\` \`terminal-state\`: Harness-verified provider terminal state from the native transport.
- Required \`verification\` \`verification\`: Harness-verified evidence for every required verification gate.
- Required \`commit\` \`commit\`: Harness-verified commit created after the launch baseline.




## Completion (Codex app-server stream)

Return the final response through the terminal turn/completed notification captured by Veritas.

Do not call the Veritas completion callback. The harness owns terminal-state capture.

No native structured-output support is assumed; Veritas validates and normalizes JSON-RPC notifications."
`;

exports[`provider task-envelope renderers > renders a callback-free Hermes scripted transport 1`] = `
"# Hermes Task Envelope

## Transport

- Envelope: \`task-envelope/v1\`
- Digest: \`sha256:11c3bb44d4151b173a8638e923d111ad60e27d2253825bc22447ee9658ba7fac\`
- Provider: \`hermes-cli\`
- Adapter: \`hermes-cli\`
- Runtime manifest: \`sha256:3e776421f98dbb09dfd589c34876a84375763d8ba7d25ff6d637d93eefb4a9ee\`
- Protocol: \`fixture-runtime/v1\`
- Task: \`task_transport\`
- Attempt: \`attempt_transport\`

## Objective

Ship the provider transport

## Background

- Translate the immutable task contract without changing completion ownership.


## Constraints

- Follow the release checklist.
- Operate only inside the assigned worktree: /tmp/veritas-kanban-transport


## Workspace

- Repository: \`veritas-kanban\`
- Branch: \`feat/hermes-cli-transport\`
- Base branch: \`main\`
- Worktree: \`/tmp/veritas-kanban-transport\`
- Launch HEAD: \`aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa\`
- Launch state: clean

### Launch Baseline Files

- None.



## Commit Policy

Required: create at least one new commit attributable to this attempt.

## Acceptance Criteria

- The provider receives the persisted envelope.


## Allowed Side Effects

- \`filesystem-write\` within \`/tmp/veritas-kanban-transport\`
- \`process-execute\` within \`/tmp/veritas-kanban-transport\`
- \`git-commit\` within \`/tmp/veritas-kanban-transport\`
- \`network-egress\` within \`sandbox policy\`


## Expected Outputs

- Required \`text\` \`completion-summary\`: A concise summary of the completed work and remaining risks.
- Required \`commit\` \`git-commit\`: At least one new commit attributable to this attempt.


## Verification Gates

- Required \`provider-snapshot\`: Run the provider transport snapshot. Evidence is required.


## Completion Evidence Contract

- Schema: \`completion-result/v1\`
- Required \`provider-output\` \`terminal-state\`: Harness-verified provider terminal state from the native transport.
- Required \`verification\` \`verification\`: Harness-verified evidence for every required verification gate.
- Required \`commit\` \`commit\`: Harness-verified commit created after the launch baseline.




## Completion (Hermes scripted process)

Return the final response through scripted stdout captured by Veritas.

Do not call the Veritas completion callback. The harness owns terminal-state capture.

No native structured-output support is assumed; Veritas validates and normalizes scripted process output."
`;

exports[`provider task-envelope renderers > renders an OpenClaw callback transport from a required-commit envelope 1`] = `
"# OpenClaw Task Envelope

## Transport

- Envelope: \`task-envelope/v1\`
- Digest: \`sha256:561cc34a738673a3416aa5e870058d95c67c775b92eb95299f795ac2d05c6afa\`
- Provider: \`openclaw\`
- Adapter: \`openclaw\`
- Runtime manifest: \`sha256:e48e449a859828453b857c8f46d1c071cf491eb8284096a5a8c9143aabc8f772\`
- Protocol: \`fixture-runtime/v1\`
- Task: \`task_transport\`
- Attempt: \`attempt_transport\`

## Objective

Ship the provider transport

## Background

- Translate the immutable task contract without changing completion ownership.


## Constraints

- Operate only inside the assigned worktree: /tmp/veritas-kanban-transport


## Workspace

- Repository: \`veritas-kanban\`
- Branch: \`feat/openclaw-transport\`
- Base branch: \`main\`
- Worktree: \`/tmp/veritas-kanban-transport\`
- Launch HEAD: \`aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa\`
- Launch state: clean

### Launch Baseline Files

- None.



## Commit Policy

Required: create at least one new commit attributable to this attempt.

## Acceptance Criteria

- The provider receives the persisted envelope.


## Allowed Side Effects

- \`filesystem-write\` within \`/tmp/veritas-kanban-transport\`
- \`process-execute\` within \`/tmp/veritas-kanban-transport\`
- \`git-commit\` within \`/tmp/veritas-kanban-transport\`
- \`network-egress\` within \`sandbox policy\`


## Expected Outputs

- Required \`text\` \`completion-summary\`: A concise summary of the completed work and remaining risks.
- Required \`commit\` \`git-commit\`: At least one new commit attributable to this attempt.


## Verification Gates

- Required \`provider-snapshot\`: Run the provider transport snapshot. Evidence is required.


## Completion Evidence Contract

- Schema: \`completion-result/v1\`
- Required \`provider-output\` \`terminal-state\`: Harness-verified provider terminal state from the native transport.
- Required \`verification\` \`verification\`: Harness-verified evidence for every required verification gate.
- Required \`commit\` \`commit\`: Harness-verified commit created after the launch baseline.


## Profile Instructions (agent profile)

Follow the release checklist.


## Resume Context (task checkpoint)

- Resume count: 1
- Captured at: 2026-07-23T20:45:00.000Z
- Last step: 2

\`\`\`json
{
  "next": "dispatch"
}
\`\`\`

Continue from this checkpoint. Do not repeat work already represented in the saved state.


## Completion (OpenClaw callback)

When the work reaches a terminal state, report it to Veritas.

- Endpoint: \`POST http://localhost:3001/api/agents/task_transport/complete\`

\`\`\`bash
curl -X POST http://localhost:3001/api/agents/task_transport/complete \\
  -H "Content-Type: application/json" \\
  -d '{"attemptId":"attempt_transport","providerRuntimeManifestDigest":"sha256:e48e449a859828453b857c8f46d1c071cf491eb8284096a5a8c9143aabc8f772","success":true,"summary":"Brief description of what was done"}'
\`\`\`

For failure, send \`success: false\` and include an \`error\` message.

No native structured-output support is assumed; Veritas validates and normalizes the callback."
`;
